<resources>
    <string name="app_name">Muvi</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="your_personal_movie_curator">Your personal movie curator.</string>
    <string name="create_account">Create Account</string>
    <string name="login_loginpage">Login</string>
    <string name="recommended_movie">Recommended Movie</string>
    <string name="category">Category</string>
    <string name="upcoming_movie">Upcoming Movie</string>
    <string name="popular_movie">Popular Movie</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="movies">Movies</string>
    <string name="people">People</string>
    <string name="cast">Cast</string>
    <string name="title">Title</string>
    <string name="genre">Genre</string>
    <string name="settings">Settings</string>
    <string name="profile_image">Profile Image</string>
    <string name="name_display">Display Name</string>
    <string name="username">username</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="mu">Mu</string>
    <string name="vi">vi</string>
    <string name="bio">Bio</string>
    <string name="following_count">Following</string>
    <string name="following_label">followings</string>
    <string name="follower_count">Follower</string>
    <string name="follower_label">followers</string>
    <string name="favorites">Favorites</string>
    <string name="year">Year</string>
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="duration">Duration</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="summary">Summary</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="favorite">Add to Favorite</string>
    <string name="instruction">Please select what you like</string>
    <string name="finish">Finish</string>
    <string name="similar_movies_poster">Similar Movies Poster</string>
    <string name="init_item_poster">Init Item Poster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="similar_movies_by_synopsys">Similar Movies By Synopsys</string>
    <string name="similar_movies_by_genre">Similar Movies By Genre</string>
    <string name="remove_favorite">Remove From Favorite</string>
    <string name="add_to_favorite">Add To Favorite</string>
</resources>