<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/profile_image"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp"/>

    <TextView
        android:id="@+id/text_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/name_display"
        android:textAppearance="?attr/textAppearanceListItem"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toTopOf="@+id/image_profile"
        app:layout_constraintEnd_toStartOf="@+id/follow_button"/>

    <TextView
        android:id="@+id/text_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/username"
        android:textColor="@color/accent"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@+id/text_name"
        app:layout_constraintEnd_toStartOf="@+id/follow_button"/>

    <Button
        android:id="@+id/follow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/accent"
        android:text="@string/follow"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/unfollow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/grey"
        android:text="@string/unfollow"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
