<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main"
    tools:context=".ui.quiz.QuizActivity">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/moviePart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mu"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dbPart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vi"
                android:textColor="@color/accent"
                android:textSize="36sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/appSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_personal_movie_curator"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvInitMovies"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="16dp"
        android:clipToPadding="false"
        android:scrollbars="vertical"
        android:layout_below="@id/instruction"
        android:layout_above="@id/finishButton"
        android:layout_marginBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3"
        tools:listitem="@layout/item_init_movies"/>

    <Button
        android:id="@+id/finishButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/accent"
        android:textColor="@color/black"/>

</RelativeLayout>
