<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:background="@color/main">

    <ImageView
        android:id="@+id/favoriteItemImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        tools:src="@tools:sample/backgrounds/scenic"
        android:contentDescription="Favorite Item Poster"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/favoriteItemDetails"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:id="@+id/favoriteItemDetails"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/favoriteItemImage"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/favoriteItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/favoriteItemYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            android:textColor="#AAAAAA"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/favoriteItemGenre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genre"
            android:textColor="#AAAAAA"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
